Fix the Sass styles for incorrectly answered quiz question groups
The default Bootstrap alert-danger styles do not look good on
the whole question group, so the styles are changed here.

Part of apluslms/mooc-grader#149

--- a/assets/sass/protocols/_quiz1.scss
+++ b/assets/sass/protocols/_quiz1.scss
@@ -49,6 +49,14 @@ $questionnaire-focus-bg: #bce8f1;
 		color: #333;
 	}
 
+	/* Incorrectly answered question group with 'group_errors' grading. */
+	fieldset.alert-danger {
+		background-color: $body-bg;
+		color: #333;
+		border: 2px solid $brand-danger;
+		font-weight: bold;
+	}
+
 	.quiz1-icon-correct {
 		@include icons.glyphicon;
 		color: #5cb85c;
